objects/Five9__Five9OmniChannelMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Mapping between Five9 Channels and Omni Channels</description>
    <fields>
        <fullName>Five9__Delete_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by UI to mark  line for deletion</description>
        <label>Delete Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Five9__Five9_Channel_Id__c</fullName>
        <label>Five9 Channel Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9_Channel_Label__c</fullName>
        <label>Five9 Channel Label</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Owner_Id__c</fullName>
        <label>Owner Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Service_Channel_Id__c</fullName>
        <label>Service Channel Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Five9 Omni-Channel Mapping</label>
</CustomObject>